refactor: converter OrderRequestDTO para Record